--- a/bicicletas.html
+++ b/bicicletas.html
@@ -55,7 +55,7 @@
           <li><img src="./img/icones/velocidade.svg" alt="">50 km/h</li>
           <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
         </ul>
-        <a class="botao seta" href="./bicicletas/nimbus.html">Mais Sobre</a>
+        <a class="botao seta" href="./bibicletas/nimbus.html">Mais Sobre</a>
       </div>
     </div>
 
@@ -74,7 +74,7 @@
             <li><img src="./img/icones/velocidade.svg" alt="">45 km/h</li>
             <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
           </ul>
-          <a class="botao seta" href="./bicicletas/magic.html">Mais Sobre</a>
+          <a class="botao seta" href="./bibicletas/magic.html">Mais Sobre</a>
 
         </div>
       </div>
@@ -94,7 +94,7 @@
           <li><img src="./img/icones/velocidade.svg" alt="">50 km/h</li>
           <li><img src="./img/icones/rastreador.svg" alt="">Rastreador</li>
         </ul>
-        <a class="botao seta" href="./bicicletas/nebula.html">Mais Sobre</a>
+        <a class="botao seta" href="./bibicletas/nebula.html">Mais Sobre</a>
 
       </div>
     </div>
